Bug 156487 - If the show changes mode is turned off and the column is deleted, it will not be hidden.
Summary: If the show changes mode is turned off and the column is deleted, it will not...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-07-27 11:02 UTC by NISZ LibreOffice Team
Modified: 2024-02-22 03:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-07-27 11:02:27 UTC
Description:
If the show changes mode is turned off and the column is deleted, it will not be hidden.

Steps to Reproduce:
1. Insert a table column with change tracking REcord ON /Show Off.
2. Delete a column.


Actual Results:
Deletion is not hidden.

Expected Results:
Deletion is hidden.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cf8f7b91f41821b79495c0388359c4cb1156ea67
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Stéphane Guillou (stragu) 2023-07-27 11:36:45 UTC
Not reproduced with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d0a62bd75b9a895c419aa165da648ab18f134d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Regression from something in https://git.libreoffice.org/core/+log/24d0a62bd75b9a895c419aa165da648ab18f134d..cf8f7b91f41821b79495c0388359c4cb1156ea67 ?

Maybe 7f0e31976793c2701110742eb3d7ef4858eec72a ?
Comment 2 Commit Notification 2023-08-09 15:22:32 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f65c04b2b32a9e00dd05a16614b4dedb86171c97

tdf#156487 sw tracked table column: fix Hide Changes

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-08-14 09:13:26 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/dfa57ee45bf9aef73f8bf385b089739ee0572998

tdf#156487 sw tracked table column: fix Hide Changes

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.