tdf#156487 sw tracked table column: fix Hide Changes

In Hide Changes mode, deleting table columns with change tracking
wasn't applied on the table layout immediately, only using Show
Changes and Hide Changes again. Now the deleted column removed from
the table instead leaving an empty table column.

Also revert commit 33058b5dc47a140516669945efbdd30ea65138a6
"tdf#156544 sw tracked table column: delete empty column".

See also commit a74c51025fa4519caaf461492e4ed8e68bd34885
"tdf#146962 sw: hide deleted row at deletion in Hide Changes".

Change-Id: If03d2bc5996a168cb44839b0753effb9031edbc7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155522
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 43b128a960d1712b984402e1b69cefecdb75462a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155478
Tested-by: László Németh <nemeth@numbertext.org>